--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/query-sync-storage-persister": "^5.62.15",
     "@tanstack/react-query": "^5.62.11",
     "@tanstack/react-query-devtools": "^5.62.14",
+    "@tanstack/react-query-persist-client": "^5.62.15",
     "clsx": "^2.1.1",
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^5.0.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
@@ -37,6 +40,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
